@@ -18,7 +18,7 @@ Build-Depends: debhelper (>= 11~),
                python3-django-q (>= 0.9.4-2),
                python3-djangorestframework,
                python3-lockfile,
-               python3-mailmanclient,
+               python3-mailmanclient (>= 3.2.0),
                python3-mock,
                python3-networkx,
                python3-robot-detection,
@@ -46,7 +46,7 @@ Depends: fonts-glewlwyd,
          python3-django-q (>= 0.9.4-2),
          python3-djangorestframework,
          python3-lockfile,
-         python3-mailmanclient,
+         python3-mailmanclient (>= 3.2.0),
          python3-networkx,
          python3-robot-detection,
          python3-tz,
