@@ -1,10 +1,0 @@
-# hyperkitty is not yet supporting python3. Upstream is currently working on
-# this matter and should soon provide a python3-only version of hyperkitty
-# and drop python2 support.
-#
-# See https://gitlab.com/mailman/hyperkitty/merge_requests/75 for more
-# information. The merge happened into master on commit
-# https://gitlab.com/mailman/hyperkitty/commit/0cbffdf139fc7497083f96cb90c5db319ef0ca59
-# and hyperkitty 1.2.0 relase will include it.
-hyperkitty source: python-foo-but-no-python3-foo python-django-hyperkitty
-
